# VercelTest

./: .gitignore  .vercelignore  DEPLOYMENT.md  api_server.py  api_vercel.py  faq.py  faq2.py  main.py  openai_agent.py  pyproject.toml  requirements-vercel.txt  requirements.txt  search_helper.py  testfaq.py  uv.lock.local  vector_db.py  vercel.json
